# advent-of-code-2022

./: .clang-format  CMakeLists.txt  README.md
problems/: day11.txt
src/aoc22/: CMakeLists.txt  aoc.cpp  aoc.h  aoc22.h  common.cpp  day01.cpp  day01.main.cpp  day02.cpp  day02.main.cpp  day03.cpp  day03.main.cpp  day04.cpp  day04.main.cpp  day05.cpp  day05.main.cpp  day06.cpp  day06.main.cpp  day07.cpp  day07.main.cpp  day08.cpp  day08.main.cpp  day09.cpp  day09.main.cpp  day10.cpp  day10.main.cpp  day11.cpp  day11.main.cpp  day12.cpp  day12.main.cpp  day13.cpp  day13.main.cpp  day14.cpp  day14.main.cpp  day15.cpp  day15.main.cpp  day16 copy.cpp  day16.cpp  day16.main.cpp  day17.cpp  day17.main.cpp  (+18 more)
test/: CMakeLists.txt  aoc22.test.cpp  benchmark.cpp  day01.test.cpp  test_data.h
